[package]
name = "central_system"
version = "0.1.0"
edition = "2024"

[dependencies]
log = "0.4.29"
chrono = "0.4.42"
clap = { version = "4.5.39", features = ["derive"] }
ftail = "0.3.1"
toml = "0.9.11"

config = { path = "../config/" }
ocpp = { path = "../ocpp/" }
fronius = { path = "../fronius/" }
