[package]
name = "ocppcentral_system"
version = "0.1.1"
edition = "2024"

[[bin]]
name = "OCPPCentralSystem"
path = "src/main.rs"

[dependencies]
log = "0.4.29"
chrono = "0.4.42"
clap = { version = "4.5.39", features = ["derive"] }
ftail = "0.3.1"
toml = "0.9.11"

config = { path = "../config/" }
ocpp = { path = "../ocpp/" }
fronius = { path = "../fronius/" }
awattar = { path = "../awattar/" }
uuid = "1.20.0"
env_logger = "0.11.8"
tungstenite = "0.28.0"

[build-dependencies]
git-version = "0.3.9"

[dev-dependencies]
serde_json = "1.0.148"
serde = { version = "1.0.219", features = [ "derive" ] }
rust-ocpp = { version = "3.0.4", features = ["v1_6", "v2_0_1"] }
