[package]
name = "fronius"
version = "0.1.0"
edition = "2024"

[dependencies]
chrono = { version = "0.4.43", features = [ "serde" ] }
config = { path = "../config/" }
digest = "0.10.7"
log = "0.4.29"
md5 = "0.8.0"
reqwest = { version = "0.12.4", features = ["blocking", "json"] }
serde_json = "1.0.149"
serde = { version = "1.0.219", features = [ "derive" ] }
sha2 = "0.10.9"
uom = { version = "0.38.0", features = [ "serde" ] }
