[package]
name = "ocpp"
version = "0.1.1"
edition = "2024"

[dependencies]
chrono = "0.4.42"
rust-ocpp = { version = "3.0.4", features = ["v1_6", "v2_0_1"] }
serde_json = "1.0.148"
serde = { version = "1.0.219", features = [ "derive" ] }
tungstenite = "0.28.0"
serde_repr = "0.1.20"
log = "0.4.29"
rusqlite = { version = "0.38.0", features = ["bundled"] }
uuid = { version = "1.19.0", features = ["v4"] }
clap = { version = "4.5.39", features = ["derive"] }
rust_decimal = { version = "1.39.0", features = ["macros"] }

config = { path = "../config/" }
env_logger = "0.11.8"
uom = "0.38.0"
